--- a/Face_Detection_PyQt_Final/resource.qrc
+++ b/Face_Detection_PyQt_Final/resource.qrc
@@ -1,8 +1,9 @@
 <RCC>
-  <qresource prefix="logo">
-    <file>logo.png</file>
-  </qresource>
-  <qresource prefix="icon">
-    <file>icon.png</file>
-  </qresource>
+    <qresource prefix="/logo">
+        <file>logo.png</file>
+        <file>logo1.jpg</file>
+    </qresource>
+    <qresource prefix="/icon">
+        <file>icon.png</file>
+    </qresource>
 </RCC>
